--- a/src/styles/NewlyLaunchStyles.css
+++ b/src/styles/NewlyLaunchStyles.css
@@ -31,7 +31,7 @@
   border-radius: 11px;
   margin-bottom: 14px;
   border: 1px solid var(--card-img-border);
-  background: var(--card-img-bg);
+  background: var(--card-img-bg);     /*for the background of products in the boxes */
 }
 
 .product-card div {
@@ -39,4 +39,13 @@
   color: var(--text-color);
   margin-bottom: 5px;
   text-align: center;
+}
+.product-headings {
+  padding: 10px 5px;
+  text-align: center;
+}
+.cart-btn {
+  padding: 5px;
+  border-radius: 10px;
+  margin-top: 5px;
 }
