Add cart and cart button functionality

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,7 +5,7 @@
     --btn-bg: #568F87;
     --btn-txt: #FFF5F2;
     --tab-filter-btn-active: yellow;  /*for all the filter buttons*/
-    --product-bg-color: #fcfcfd;  /* Card bg */
+    --product-bg-color: #fcfcfd;  /* Each Product or Card bg */
     --card-border: #d2e7d3;
     --card-shadow: rgba(21,92,54,0.09);
     --card-shadow-hover: rgba(21,92,54,0.16);
