--- a/src/styles/CartStyle.css
+++ b/src/styles/CartStyle.css
@@ -1,5 +1,7 @@
 .cart-page-container {
   padding: 30px 10vw;
+  align-items: center;
+  /* padding: 30px 30vw; */
   background: var(--bg-color);   /* Your background variable */
   min-height: 100vh;
   font-family: 'Segoe UI', Arial, sans-serif;
@@ -28,8 +30,8 @@
   gap: 30px;
   border: 1.5px solid var(--card-border, #e0ece4);
   transition: box-shadow 0.18s;
-  max-width: 700px;
-  height: 110px;
+  max-width: 650px;
+  height: 100px;
 }
 
 .cart-card:hover {
@@ -79,8 +81,21 @@
     border-radius: 50%;
     padding: 2px 7px;
 }
-
-
+.product-removal-btn {
+  margin-left: auto;
+  padding: 5px 2px;
+}
+.cart-total {
+  font-size: larger;
+  font-weight: bold;
+}
+.cart-total-wrapper {
+  display: flex;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+  max-width: 700px;
+}
 
 @media (max-width: 600px) {
   .cart-page-container {
