--- a/src/styles/NavbarStyles.css
+++ b/src/styles/NavbarStyles.css
@@ -8,10 +8,6 @@
     align-items: center;
     
 }
-.toggle-theme {             /*Theme toggle button in nav */
-    border-radius: 20px;
-    margin-left: auto;
-}
 .nav-list {                 /* List containing all nav items */
     display: flex; 
     text-decoration: none;
@@ -23,4 +19,27 @@
     font-weight: bold;
     color: var(--btn-txt);
 
+}
+.nav-toggle-theme-btn {             /*Theme toggle button in nav */
+    border-radius: 50%;
+    padding: 3px 6px;
+    margin-right: 5px;
+}
+.nav-btn-list {
+    display: flex;
+    margin-left: auto;
+    gap: 15px;
+    list-style: none;
+    align-items: center;
+}
+.nav-btn-item a{
+    text-decoration: none;
+    border-radius: 15px;
+    color: var(--btn-txt);
+    background-color: var(--btn-bg);
+    padding: 8px 12px;
+}
+.nav-btn-item a:hover {
+    box-shadow: 0 2px 8px rgba(80, 0, 0, 0.07);
+    border: var(--primary-btn-hover-color);
 }
