--- a/src/styles/NavbarStyles.css
+++ b/src/styles/NavbarStyles.css
@@ -24,6 +24,8 @@
     border-radius: 50%;
     padding: 3px 6px;
     margin-right: 5px;
+    color: var(--btn-txt);
+    background-color: var(--btn-bg);
 }
 .nav-btn-list {
     display: flex;
