--- a/src/styles/CartStyle.css
+++ b/src/styles/CartStyle.css
@@ -92,7 +92,7 @@
   background-color: var(--btn-bg);
   border-radius:5px ;
 }
-.cart-total {
+#cart-total {
   font-size: larger;
   font-weight: bold;
 }
@@ -102,6 +102,19 @@
   justify-content: flex-end;
   margin-top: 20px;
   max-width: 700px;
+}
+.checkout-wrapper {
+  max-width: 700px;
+  display: flex;
+  justify-content: flex-end;
+  padding: 8px 4px;
+  margin-top: 5px;
+}
+#checkout-btn {
+  border-radius: 12px;
+  padding: 8px 24px;
+  color: var(--btn-txt);
+  background-color: var(--btn-bg);
 }
 
 @media (max-width: 600px) {
