Checkout UI done

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,7 +10,7 @@
     --card-border: #d2e7d3;
     --card-shadow: rgba(21,92,54,0.09);
     --card-shadow-hover: rgba(21,92,54,0.16);
-    --card-img-bg: #f7fcf9;
+    --card-img-bg: #e5f2ea;
     --card-img-border: #e0ece4;
     --login-page-bg: #095440;
     --login-page-bg-secondnary:#8FBC8B;
