--- a/src/styles/CheckoutStyles.css
+++ b/src/styles/CheckoutStyles.css
@@ -16,12 +16,15 @@ body, #root {
     margin: 5px auto;
     padding: 8px;
     box-sizing: border-box;
+    flex-direction: column;
+    /* align-items: center; */
 }
 .item-list {
     display: flex;
     gap: 24px;
     flex-direction: column;
     width: 100%;
+    align-items: center;
 }
 .eachProductCard {
     display: flex;
@@ -32,6 +35,8 @@ body, #root {
     border-radius: 16px;
     flex-direction: row;
     align-items: center;
+    /* align-self: center; */
+    min-width: 700px;
 
 }
 #prod-image {
@@ -71,4 +76,96 @@ body, #root {
 }
 #prod-subTotal {
     font-weight: bold;
+}
+#cart-total-wrapper {
+    display: flex;
+    justify-content: center;
+    max-width: 100%;
+    margin-top: 24px; 
+}
+#cart-total {
+    max-width: 800px;
+    min-width: 700px;
+    text-align: right;
+    font-size: 20px;
+}
+/* #address-wrapper {
+    display: flex;
+    justify-content: flex-start;
+    margin: 10px 15px;
+    flex-direction: column;
+}
+#address-title {
+    font-size: 18px;
+    font-weight: bold;
+}
+#address-msg-box textarea{
+    width: 300px;
+    min-height: 80px;
+    border-radius: 4px;
+} */
+#info-box-wrapper {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+#info-box {
+    /* already CEN*/
+    background-color: var(--login-page-bg);
+    height: 450px;
+    width: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    border: 1px solid var(--card-img-border);
+}
+#info-box-content-area {
+    /* already CEN*/
+    padding: 10px;
+    width: 90%;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    box-sizing: border-box;
+    margin: 10px 5px;
+}
+#info-box-title-area {
+    flex: 0 0 30px;
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
+}
+#info-box-details-area {
+    flex: 1 1 auto;
+    overflow-y: auto;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    padding: 16px 4px;
+}
+#info-box-details-area form{
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    gap: 4px;
+}
+#info-box-btn {
+    flex: 0 0 30px;
+    align-self: flex-end;
+    border-radius: 12px;
+    padding: 4px 12px;
+    background-color: var(--btn-bg);
+    color: var(--btn-txt);
+}
+#info-box-form textarea {
+    border-radius: 4px;
+    width: 250px;
+    height: 40px;
 }
