--- a/src/styles/CartStyle.css
+++ b/src/styles/CartStyle.css
@@ -1,3 +1,21 @@
+#cart-empty-wrapper {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 16px;
+}
+#cart-empty-text {
+  font-size: 20px;
+  font-weight: bold;
+}
+#cart-empty-image {
+  height: 100px;
+  width: 100px;
+  background-color: var(--bg-color);
+}
 .cart-page-container {
   padding: 30px 10vw;
   align-items: center;
