--- a/src/styles/CheckoutStyles.css
+++ b/src/styles/CheckoutStyles.css
@@ -4,6 +4,27 @@ body, #root {
   width: 100vw;
   box-sizing: border-box;
 }
+#order-placed-wrapper {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+#order-placed-1 {
+    font-size: 28px;
+    font-weight: bold;
+}
+
+#order-placed-2 {
+    font-weight: bold;
+    font-size: 20px;
+}
+#order-placed-image {
+    height: 100px;
+    width: 100px;
+}
 .full-page-container {
     width: 100vw;
     padding: 5px;
