--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,6 +15,7 @@
     --login-page-bg: #095440;
     --login-page-bg-secondnary:#8FBC8B;
     --loading-animation-color:black;
+    --top-categories-bg:peachpuff;
 }
 html,body,:root {
     margin: 0px;
@@ -22,7 +23,8 @@ html,body,:root {
     background-color: var(--bg-color);
 }
 .page-contents {
-    padding: 10px 5px;
+    width: 100%;
+    height: 100%;
 }
 .page-contents h1,.page-contents h2,.page-contents h3 { 
     margin-top: 0px;            /*so that big headings dont eat space on the top*/
@@ -30,4 +32,9 @@ html,body,:root {
 .dark-theme {
     --bg-color: white;
     --product-bg-color: purple;
+}
+html, body {
+    width: 100vw;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
