--- a/src/styles/HomeStyles.css
+++ b/src/styles/HomeStyles.css
@@ -22,23 +22,29 @@
     height: auto;
     display: block;
 }
-#home-top-categories-title {
-    font-size: 2rem;
-    font-weight: 700;
-    line-height: 1.2;
-    margin: 24px 0 12px;
+#home-top-categories-title,
+#home-featured-product-main-title,
+#home-customer-testimonials-main-title {
+  display: flex;
+  width: 100%;
+  max-width: 100%;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 24px 0 12px;
+  justify-content: center;
 }
-#home-top-categories-options {
-    background-color: var(--top-categories-bg);
-    display: flex;
-    flex-direction: row;
-    padding: 16px 8px;
-    gap: 5px;
-    justify-content: space-around;
+#home-top-categories-options,
+#home-featured-options {
+  width: 100%;
+  max-width: 100%;
+  background-color: var(--top-categories-bg);
+  display: flex;
+  flex-direction: row;
+  padding: 16px 8px;
+  gap: 5px;
+  justify-content: space-around;
 }
-#home-top-category-1,
-#home-top-category-2,
-#home-top-category-3 {
+.home-top-category-card {
     border: 1px solid black;
     height: 300px;
     display: flex;
@@ -67,6 +73,108 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 1.2rem;
+}
+
+.home-featured-product-card {
+    border: 1px solid black;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    border-radius: 12px;
+    flex:0 0 clamp(280px,30%,360px);
+    min-width:280px;
+}
+.home-featured-image {
+  width: 100%;
+  max-width: 100%;
+  height: 70%;
+  box-sizing: border-box;
+  padding: 2px;
+  border-radius: 12px;
+  background-color: var(--card-img-bg);
+}
+.home-featured-product-details {
+  width: 100%;
+  max-width: 100%;
+  height: 30%;
+  box-sizing: border-box;
+  padding: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.home-featured-product-title {
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+.home-featured-product-price {
+  font-weight: bold;
+  color: var(--product-prices-color);
+}
+.home-customer-testimonial-name {
+  display: flex;
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin: 16px 0 12px;
+  align-items: center;
+}
+#home-customer-testimonials-options {
+  width: 100%;
+  max-width: 100%;
+  background-color: var(--cust-testimonials-bg);
+  display: flex;
+  flex-direction: row;
+  padding: 16px 8px;
+  gap: 5px;
+  justify-content: space-around;
+}
+.home-customer-testimonials-wrapper {
+  border: 1px solid black;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  border-radius: 12px;
+  flex:0 0 clamp(280px,30%,360px);
+  min-width:280px;
+  padding: 8px;
+}
+.home-customer-testimonials-heading {
+  width: 100%;
+  height: 30%;
+  display: flex;
+  flex-direction: row;
+  box-sizing: border-box;
+}
+.home-customer-profile-pic {
+  width: 15%;
+  height: 100%;
+  max-height: 100%;
+  box-sizing: border-box;
+  border-radius: 50%;
+  padding: 4px 12px;
+}
+.home-customer-testimonial-title {
+  width: 85%;
+  height: 100%;
+  max-height: 100%;
+  box-sizing: border-box;
+  display: flex;
+  padding: 4px;
+  align-items: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+.home-customer-testimonials-review {
+  height: 75%;
+  max-height: 75%;
+  padding: 4px 12px;
+  display: flex;
+  align-items: center;
+  text-align: left;
 }
 @media (max-width: 600px) {
   .page-contents { padding: 0 !important; }
@@ -91,6 +199,7 @@
     flex-direction: column;
     align-items: stretch;       
     justify-content: flex-start;
+    box-sizing: border-box;
   }
 
   #hero-image-wrapper {
@@ -111,5 +220,114 @@
     object-position: center;
     margin: 0;
     padding: 0;
+  }
+  #home-top-categories-title,
+  #home-featured-product-main-title,
+  #home-customer-testimonials-main-title {
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 1.2rem;
+  }
+  #home-top-categories-options {
+    background-color: var(--top-categories-bg);
+    display: flex;
+    flex-direction: column;
+    padding: 8px 8px;
+    gap: 5px;
+    justify-content: space-around;
+    width: 100%;
+    height: auto;
+    box-sizing: border-box;
+  }
+  .home-top-category-card {
+    border: 1px solid black;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    border-radius: 12px;
+    flex: 1 0 30%;
+  }
+  #home-featured-options {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    background-color: var(--featured-products-bg);
+    display: flex;
+    flex-direction: column;
+    padding: 8px 8px;
+    box-sizing: border-box;
+    gap: 5px;
+    justify-content: space-around;
+  }
+  .home-featured-product-card {
+    border: 1px solid black;
+    height: auto;
+    max-height: 300px;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    border-radius: 12px;
+    flex: 1 0 30%;
+  }
+  /*herer*/
+  #home-customer-testimonials-options {
+    width: 100%;
+    max-width: 100%;
+    background-color: var(--cust-testimonials-bg);
+    display: flex;
+    flex-direction: column;
+    padding: 16px 8px;
+    gap: 12px;
+    justify-content: space-around;
+    box-sizing: border-box;
+  }
+  .home-customer-testimonials-wrapper {
+    border: 1px solid black;
+    flex: 1 0 30%;
+    max-height: 175px;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    border-radius: 12px;
+
+    min-width:280px;
+    padding: 8px;
+  }
+  .home-customer-testimonials-heading {
+    width: 100%;
+    height: 30%;
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+  }
+  .home-customer-profile-pic {
+    width: 15%;
+    height: 100%;
+    max-height: 100%;
+    box-sizing: border-box;
+    border-radius: 50%;
+    padding: 4px 8px;
+  }
+  .home-customer-testimonial-title {
+    width: 85%;
+    height: 100%;
+    max-height: 100%;
+    box-sizing: border-box;
+    display: flex;
+    padding: 4px;
+    align-items: center;
+    font-size: 1rem;
+    font-weight: bold;
+  }
+  .home-customer-testimonials-review {
+    height: 75%;
+    max-height: 75%;
+    padding: 4px 12px;
+    display: flex;
+    align-items: center;
+    text-align: left;
   }
 }
