--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -25,9 +25,16 @@ html,body,:root {
     padding: 0px;
     background-color: var(--bg-color);
 }
+.all-pages-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    height: 100vh;
+}
 .page-contents {
+    flex: 1 0 auto;
     width: 100%;
-    height: 100%;
+    
 }
 .page-contents h1,.page-contents h2,.page-contents h3 { 
     margin-top: 0px;            /*so that big headings dont eat space on the top*/
@@ -39,5 +46,7 @@ html,body,:root {
 html, body {
     width: 100vw;
     max-width: 100vw;
+    height: 100%;
+    min-height: 100%;
     overflow-x: hidden;
 }
