Implemented Sorting of Products both UI and functionality

--- a/src/styles/ProductStyles.css
+++ b/src/styles/ProductStyles.css
@@ -22,3 +22,8 @@
   height: 100vh;
   overflow-y: auto;
 }
+.product-filters-btn {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 20px;
+}
