--- a/src/styles/HomeStyles.css
+++ b/src/styles/HomeStyles.css
@@ -22,8 +22,6 @@
     height: auto;
     display: block;
 }
-#home-top-categories-title,
-#home-featured-product-main-title,
 #home-customer-testimonials-main-title {
   display: flex;
   width: 100%;
@@ -33,8 +31,7 @@
   margin: 24px 0 12px;
   justify-content: center;
 }
-#home-top-categories-options,
-#home-featured-options {
+/* #home-top-categories-options {
   width: 100%;
   max-width: 100%;
   background-color: var(--top-categories-bg);
@@ -43,8 +40,8 @@
   padding: 16px 8px;
   gap: 5px;
   justify-content: space-around;
-}
-.home-top-category-card {
+} */
+/* .home-top-category-card {
     border: 1px solid black;
     height: 300px;
     display: flex;
@@ -53,8 +50,8 @@
     border-radius: 12px;
     flex:0 0 clamp(280px,30%,360px);
     min-width:280px;
-}
-.home-category-image {
+} */
+/* .home-category-image {
     width: 100%;
     max-width: 100%;
     height: 85%;
@@ -74,9 +71,10 @@
     align-items: center;
     justify-content: center;
     font-size: 1.2rem;
-}
+} */
 
-.home-featured-product-card {
+/* .home-featured-product-card,
+.boss-best{
     border: 1px solid black;
     height: 400px;
     display: flex;
@@ -113,7 +111,7 @@
 .home-featured-product-price {
   font-weight: bold;
   color: var(--product-prices-color);
-}
+} */
 .home-customer-testimonial-name {
   display: flex;
   font-size: 1.2rem;
@@ -227,8 +225,7 @@
     margin: 0;
     padding: 0;
   }
-  #home-top-categories-title,
-  #home-featured-product-main-title,
+  /* #home-top-categories-title, */
   #home-customer-testimonials-main-title {
     width: 100%;
     max-width: 100%;
@@ -236,7 +233,7 @@
     justify-content: center;
     font-size: 1.2rem;
   }
-  #home-top-categories-options {
+  /* #home-top-categories-options {
     background-color: var(--top-categories-bg);
     display: flex;
     flex-direction: column;
@@ -255,8 +252,8 @@
     box-sizing: border-box;
     border-radius: 12px;
     flex: 1 0 30%;
-  }
-  #home-featured-options {
+  } */
+  /* #home-featured-options {
     width: 100%;
     max-width: 100%;
     height: auto;
@@ -267,8 +264,8 @@
     box-sizing: border-box;
     gap: 5px;
     justify-content: space-around;
-  }
-  .home-featured-product-card {
+  } */
+  /* .home-featured-product-card {
     border: 1px solid black;
     height: auto;
     max-height: 300px;
@@ -277,7 +274,7 @@
     box-sizing: border-box;
     border-radius: 12px;
     flex: 1 0 30%;
-  }
+  } */
   /*herer*/
   #home-customer-testimonials-options {
     width: 100%;
