--- a/src/styles/HomeStyles/TopCategoriesStyles.css
+++ b/src/styles/HomeStyles/TopCategoriesStyles.css
@@ -11,6 +11,7 @@
 #home-top-categories-options {
   width: 100%;
   max-width: 100%;
+  height: 350px;
   background-color: var(--top-categories-bg);
   display: flex;
   flex-direction: row;
@@ -18,16 +19,21 @@
   gap: 5px;
   justify-content: space-around;
   box-sizing: border-box;
+  align-items: center;
 }
 .home-top-category-card {
   border: 1px solid black;
   height: 300px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   box-sizing: border-box;
   border-radius: 12px;
   flex:0 0 clamp(280px,30%,360px);
   min-width:280px;
+}
+a.Top-categories-link-wrapper {
+  text-decoration: none;
+  color: inherit;
 }
 .home-category-image {
   width: 100%;
@@ -50,6 +56,7 @@
   justify-content: center;
   font-size: 1.2rem;
 }
+
 @media (max-width: 600px) {
     .home-top-categories-main-div {
       height: fit-content;
