--- a/src/styles/CheckoutStyles.css
+++ b/src/styles/CheckoutStyles.css
@@ -51,7 +51,7 @@ body, #root {
     display: flex;
     max-width: 800px;
     height: 90px;
-    background-color: var(--product-bg-color);
+    background-color: var(--product-card-bg-color);
     padding: 20px 28px;
     border-radius: 16px;
     flex-direction: row;
@@ -141,7 +141,6 @@ body, #root {
     justify-content: center;
     align-items: center;
     border-radius: 20px;
-    border: 1px solid var(--card-img-border);
 }
 #info-box-content-area {
     /* already CEN*/
