--- a/src/styles/ContactUsStyles.css
+++ b/src/styles/ContactUsStyles.css
@@ -42,6 +42,8 @@ a#contact-us-login-redirect-btn {
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
+    border-radius: 24px;
+    overflow: hidden;
 }
 #contact-us-dialog-box-title {
     width: 100%;
@@ -101,7 +103,7 @@ a#contact-us-login-redirect-btn {
 }
 #contact-us-message-area textarea {
     width: 70%;
-    height: 30px;
+    height: 60px;
 }
 #contact-us-submit-btn {
     border-radius: 20px;
@@ -113,6 +115,15 @@ a#contact-us-login-redirect-btn {
 }
 
 @media (max-width:600px) {
+    #contact-us-dialog-box {
+        height: 350px;
+        width: 350px;
+        display: flex;
+        flex-direction: column;
+        box-sizing: border-box;
+        border-radius: 24px;
+        overflow: hidden;
+    }
     #contact-us-message-wrapper {
         width: 100%;
         height: 250px;
@@ -131,6 +142,10 @@ a#contact-us-login-redirect-btn {
         padding: 4px 8px;
         margin-top: 12px;
     }
+    #contact-us-message-area textarea {
+        width: 200px;
+    }
+    
 
 
 }
