--- a/src/styles/ProductStyles.css
+++ b/src/styles/ProductStyles.css
@@ -8,15 +8,14 @@
   display: flex;
   flex-direction: column;
 }
-#product-filters {
+/* #product-filters {
   top: 0px;
   position: sticky;
   flex: 0 0 240px;
   overflow-y: auto;
   align-self: flex-start;
-  background-color: aqua;
   height: 100vh;
-}
+} */
 /* here we change*/
 #product-title-part {
   display: flex;
@@ -56,4 +55,28 @@
   justify-content: flex-end;
   width: 100%;
   padding-right: 20px;
+}
+#product-details {
+  position: relative;
+}
+#details-sidebar {
+  position: absolute;
+  top: 0;
+  left: -240px;
+  width: 240px;
+  height: 100%;
+  background-color: aliceblue;
+  box-shadow: 2px 0 6px rgba(0, 0, 0, 0.12);
+  transition: left 0.3s ease;
+  overflow: auto;
+  z-index: 1;
+}
+#product-details.sidebar-open #details-sidebar {
+  left: 0;
+}
+.details-content {
+ transition: margin-left .3s ease;
+}
+#product-details.sidebar-open .details-content {
+  margin-left: 240px; 
 }
