--- a/my-react-app/src/styles/App.css
+++ b/my-react-app/src/styles/App.css
@@ -14,7 +14,8 @@
     --card-img-bg: #cae4ff;
     --product-prices-color:rgb(32, 96, 136);
     --loading-animation-color:black;
-    --top-categories-bg: #fefaf2;
+    --top-categories-bg: #fff1d5;
+    --form-body: #bbdeff;
 }
 html,body,:root {
     margin: 0px;
