--- a/my-react-app/src/styles/LoginStyle.css
+++ b/my-react-app/src/styles/LoginStyle.css
@@ -125,6 +125,7 @@
   border-radius: 12px 12px 0 0 ;
   font-weight: bold;
   font-size: 18px;
+  border: 1px solid black;
 }
 .login-details-container {
   display: flex;
@@ -132,9 +133,10 @@
   height: 80%;
   flex-direction: column;
   border-radius: 0 0 12px 12px;
-  background-color: var(--btn-bg);
+  background-color: var(--top-categories-bg);
   padding: 12px 16px;
   box-sizing: border-box;
+  border: 1px solid black;
   gap: 16px;
 }
 .login-input-container-wrapper {
@@ -154,8 +156,10 @@
   flex: 0 0 auto;
   height: 100%;
   box-sizing: border-box;
-  background-color: lightskyblue;
+  background-color: var(--btn-bg);
   align-items: center;
+  border-radius: 4px 0 0 4px;
+  border: 1px solid gray;
 }
 .login-input-fields {
   display: flex;
@@ -170,6 +174,7 @@
   box-sizing: border-box;
   justify-content: center;
   align-items: center;
+  margin-top: 12px;
 }
 .submit-btn {
   display: flex;
@@ -177,7 +182,51 @@
   width: 50%;
   background-color: var(--btn-bg);
   color: var(--btn-txt);
-  border: 2px solid black;
-  border-radius: 16px;
-  padding: 8px;
+  /* border: 2px solid black; */
+  border-radius: 20px;
+  padding: 8px 0;
+}
+.registration-link {
+  display: flex;
+  justify-content: center;
+}
+.registration-link a {
+  text-decoration: none;
+  font-weight: bold;
+}
+.login-input-field-errors {
+  color: red;
+}
+@media (min-width:650px) {
+  .login-container-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .login-container {
+    max-width: 450px;
+    height: 375px;
+    margin: 0px;
+  }
+  .login-heading-container {
+    font-size: 20px;
+  }
+  .login-details-container {
+    display: flex;
+    gap: 24px;
+  }
+  /* .login-submit-btn-wrapper {
+    margin-top: 16px;
+  } */
+  .login-submit-btn-wrapper input {
+    padding: 10px 8px;
+    font-size: 15px;
+    max-width: 300px;
+  }
+  .login-submit-btn-wrapper input:hover {
+    background-color: var(--btn-hover-bg);
+  }
+  .registration-link {
+    font-size: 18px;
+  }
 }
