Made fully functional login and register routers with JWT security and some small chages

--- a/my-react-app/src/styles/App.css
+++ b/my-react-app/src/styles/App.css
@@ -14,7 +14,7 @@
     --card-img-bg: #cae4ff;
     --product-prices-color:rgb(32, 96, 136);
     --loading-animation-color:black;
-    --top-categories-bg: #fff1d5;
+    --top-categories-bg: #fff7e6;
     --form-body: #bbdeff;
 }
 html,body,:root {
