--- a/my-react-app/src/styles/LoginStyle.css
+++ b/my-react-app/src/styles/LoginStyle.css
@@ -70,6 +70,11 @@
   box-sizing: border-box;
   border-radius: 4px;
 }
+.wrongCredentials-error {
+  display: flex;
+  color: red;
+  justify-content: center;
+}
 .login-submit-btn-wrapper {
   display: flex;
   width: 100%;
