--- a/my-react-app/src/styles/CartStyle.css
+++ b/my-react-app/src/styles/CartStyle.css
@@ -20,7 +20,7 @@
   justify-content: center;
   align-items: center;
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 1.7rem;
 }
 .cart-main-content {
   display: flex;
@@ -48,6 +48,7 @@
   min-width: 600px;
   height: 130px;
   border: 1px solid black;
+  background-color: var(--product-card-bg-color);
   display: flex;
   flex-direction: row;
   padding: 8px 16px;
@@ -140,8 +141,6 @@
       box-sizing: border-box;
       justify-content: center;
     }
-    /* remove the desktop constraint */
-    /* let them shrink to mobile */
     .cart-content-area,
     .cart-main-content,
     .cart-items-list,
