--- a/my-react-app/src/styles/HomeStyles.css
+++ b/my-react-app/src/styles/HomeStyles.css
@@ -26,6 +26,7 @@
   display: flex;
   width: 100%;
   max-width: 100%;
+  color: var(--text-color);
   font-size: 1.5rem;
   font-weight: bold;
   margin: 24px 0 12px;
@@ -47,6 +48,7 @@
   padding: 16px 8px;
   gap: 5px;
   justify-content: space-around;
+  box-sizing: border-box;
 }
 .home-customer-testimonials-wrapper {
   border: 1.5px solid black;
@@ -98,6 +100,9 @@
   align-items: center;
   justify-content: center;
   margin: 12px 0px;
+}
+#contact-section-wrapper {
+  color: var(--text-color);
 }
 @media (max-width: 600px) {
   .page-contents { padding: 0 !important; }
