--- a/my-react-app/src/styles/HomeStyles/FeaturedProductsStyles.css
+++ b/my-react-app/src/styles/HomeStyles/FeaturedProductsStyles.css
@@ -15,6 +15,7 @@
   font-weight: bold;
   margin: 24px 0 16px;
   justify-content: center;
+  color: var(--text-color);
 }
 #home-featured-options {
   width: 100%;
