--- a/my-react-app/src/styles/HomeStyles/TopCategoriesStyles.css
+++ b/my-react-app/src/styles/HomeStyles/TopCategoriesStyles.css
@@ -2,6 +2,7 @@
   display: flex;
   width: 100%;
   max-width: 100%;
+  color: var(--text-color);
   font-size: 1.5rem;
   font-weight: bold;
   margin: 28px 0 12px;
