--- a/my-react-app/src/styles/LoginStyle.css
+++ b/my-react-app/src/styles/LoginStyle.css
@@ -2,6 +2,7 @@
   display: flex;
   width: 100%;
   height: 100%;
+  flex-direction: column;
 }
 .login-content-area {
   display: flex;
@@ -99,8 +100,27 @@
   text-decoration: none;
   font-weight: bold;
 }
-.login-input-field-errors {
-  color: red;
+.loggedIn-full-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  gap: 12px;
+}
+.logoutBtn {
+  background-color: var(--btn-bg);
+  color: var(--btn-txt);
+  border-radius: 16px;
+  padding: 8px 24px;
+  font-size: 15px;
+  width: 40%;
+}
+.logoutBtnText {
+  color: var(--text-color);
+  font-size: 18px;
+  font-weight: bold;
 }
 @media (min-width:650px) {
   .login-full-container {
@@ -124,5 +144,11 @@
   }
   .registration-link {
     font-size: 18px;
+  }
+  .logoutBtn {
+    max-width: 150px;
+  }
+  .logoutBtn:hover {
+    background-color: var(--btn-hover-bg);
   }
 }
